--- a/profile-card-component/styles.css
+++ b/profile-card-component/styles.css
@@ -70,7 +70,7 @@ ul{
     text-align: center;
 }
 
-.stats-wrapper{
+.build{
     display: flex;
     justify-content: space-evenly;
     margin-top: 1rem;
